fixed product dev cycle header left aligning

--- a/src/component/LandingPageV2/ProductDevLifecycle/Ideation/style.css
+++ b/src/component/LandingPageV2/ProductDevLifecycle/Ideation/style.css
@@ -119,7 +119,7 @@ a {
 
   .ideation {
     margin-left: 12.55vh;
-    margin-top: 5%;
+    margin-top: 4%;
   }
 
   .IdeationText {
